# hdf5_to_lerobot

./: .gitignore  BABEL_HDF5_CONVERSION.md  README.md  SIM_DOUBLE_INSERT_CONVERSION.md  SIM_PACKING_CONVERSION.md  _convert_baseline_driver.sh  burger_dirs.txt  convert_array.sbatch  convert_array_gpu.sbatch  convert_di_array.sbatch  convert_di_cpu.sbatch  convert_di_gen.sbatch  convert_lidburger.sbatch  convert_xarm_data_to_lerobot.py  convert_xarm_data_to_lerobot_test.py  convert_xarm_hdf5_to_lerobot.py  convert_xarm_sim_data_to_lerobot.py  convert_xarm_sim_double_insert_to_lerobot.py  env.sh  hang_dirs.txt  hang_dirs_by_size.txt  lid_dirs.txt  push_di_array.sbatch  push_hang_array.sbatch  push_lerobot_array.sbatch  push_raw.sbatch  push_raw_array.sbatch  pyproject.toml  render_sim_annotation_preview.py  sim_double_insert_dirs.txt  sim_double_insert_dirs_bysize.txt  smoke_all.sh  verify_raw.sbatch  verify_raw_lidburger.sbatch  verify_raw_upload.py  warm_cache.sh
