[project]
name = "hdf5-to-lerobot"
version = "0.1.0"
description = "Convert old real dual-xArm HDF5 episodes to LeRobot v2 datasets (Babel)."
requires-python = ">=3.11,<3.13"
dependencies = [
    "h5py>=3.8",
    "lerobot",
    "numpy",
    "pillow",
    "scipy",
    "tqdm",
    "tyro",
]

# Match openpi's pinned lerobot so the dataset format is identical.
[tool.uv.sources]
lerobot = { git = "https://github.com/huggingface/lerobot", rev = "0cf864870cf29f4738d3ade893e6fd13fbd7cdb5" }

[tool.uv]
# Keep the resolver from trying to build the local dir as a package.
package = false
